# GPU-Linear-Systems

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  analyze.py  analyze_matrix.cpp  bench.py  bench_cpu.py  bench_gpu.py  build.sh  build2.sh  linear_sys.cpp  linear_sys.h  task1.cpp  task2.cpp  task_amgx.cpp  task_cudss.cpp  task_cudss.cu  task_cudss_loop.cpp  task_cusolver.cu  task_eigen_pardiso.cpp  task_pardiso.cpp  task_pardiso_detailed.cpp  task_simple.cpp  utils.h
implementations/: lu_eigen_mkl.cpp  lu_mkl.cpp  lu_naive.cpp
